# Ps_Group11_Assignment1

./: CMakeLists.txt  README.md  Test2.txt  main.cpp  test2.cpp
.github/workflows/: Build_and_Test.yml  cmake-multi-compiler .yml  cmake-single-platform.yml
project-log/: project-log.md
src/: gs.cpp  gs.h
tests/: test.cpp
